--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -1987,8 +1987,8 @@ input[type="radio"]:checked + label span {
     margin-right: 10px;
     position: relative;
 }
-.bat-box .ba-btn2 span:after{content:'';background-image:url(../img/de/mo/icon-1m.jpg);background-size: 3rem 3.5rem;width: 3rem;height: 3.5rem;position: absolute;left: -3.9rem;}
-.bat-box .ba-btn3 span:after{content:'';background-image:url(../img/de/mo/icon-2m.jpg);background-size: 3rem 3.5rem;width: 3rem;height: 3.5rem;position: absolute;left: -3.9rem;}
+/* .bat-box .ba-btn2 span:after{content:'';background-image:url(../img/de/mo/icon-1m.jpg);background-size: 3rem 3.5rem;width: 3rem;height: 3.5rem;position: absolute;left: -3.9rem;}
+.bat-box .ba-btn3 span:after{content:'';background-image:url(../img/de/mo/icon-2m.jpg);background-size: 3rem 3.5rem;width: 3rem;height: 3.5rem;position: absolute;left: -3.9rem;} */
 .bat-box button span{
     display: inline-block;
     vertical-align: middle;
@@ -2008,12 +2008,12 @@ input[type="radio"]:checked + label span {
     font-size: 2.4rem;
 }
 .ba-btn3{
-    border: #e9625c 3px solid;
-    color: #e9625c;
-    width: 49%;
+    border: #c5c5c5 3px solid;
+    color: #c5c5c5;
+    width: 100%;
     float: left;
     font-size: 2.4rem;
-    display: none;
+    /* display: none; */
 }
 
 .sub-user{
@@ -5842,3 +5842,19 @@ p.dib{display:inline-block !important;}
     float: left;
     padding: 0;
 } 
+
+/*0704*/
+.addrBtn {
+	background: #999999;
+    width: 58px !important;
+    font-size: 2.0rem;
+    font-weight: 600;
+    color: #fff;
+    height: 6.3rem !important;
+    margin-left: 0 !important;
+    float: right !important;
+}
+
+.input-box .input-2 {
+    padding: 0px 0 1.5rem 15.7rem !important;
+}
